[Frontend] Fix message content alignment
Apparently, Chrome dislikes inline-block elements with explicit heights
quite much.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -85,9 +85,10 @@ body {
   display: inline-block;
 }
 .message > .line .nick-wrapper .nick::before {
-  content: "";
+  /* HACK: Abusing the un-selectability of pseudoelements */
+  content: " ";
   display: inline-block;
-  min-height: 1em;
+  width: 0;
 }
 .message > .line time {
   display: inline-block;
